index.html update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p id="userGuess-text"></p>
   </div>
   
-  <script> //need to make .js file
+  <script> //need to make .js file ASAP
   function startMe() {
       
     // Creates an array that lists out all of the computer's options, aka, the alphabet
