Homework Final Final Files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <script src="assets/js/game.js"></script>
   <script type="text/javascript"></script>
   <title>Psychic Game</title>
@@ -23,5 +22,11 @@
     <p id="userGuess-text"></p>
   </div>
 </div>
+<!-- sticky footer code -->
+<footer class="footer mt-auto py-3">
+  <div class="container">
+  <span class="text-muted">Copywrite &copy; 2019  Aardvark Computer Consulting (RWalls)</span>
+  </div>
+</footer>
 </body>
 </html>
