--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel = "stylesheet" href="assets/css/reset.css">
   <script src="assets/js/game.js"></script>
   <script type="text/javascript"></script>
   <title>Psychic Game</title>
@@ -13,7 +13,7 @@
 <div class="container">
   <h1>The Psychic Game</h1>
   <div>
-    <p id="directions-text">Press the key for your guess at what letter the computer is thinking of!</p>
+    <h2 id="directions-text">Press the key for your guess at what letter the computer is thinking of!</h2>
     <p id="userchoice-text"></p>
     <p id="computerchoice-text"></p>
     <p id="wins-text"></p>
